Fix header displacement on iOS when keyboard opens/closes using dvh

--- a/src/pages/EditorPage/EditorPage.module.scss
+++ b/src/pages/EditorPage/EditorPage.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  height: 100dvh;
   background: #f5f5f5;
   font-family: 'Manrope', sans-serif;
 }
